tests/restrict-unifi-management-policies-other-identity/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-unifi-management-policies-other-identity
policies:
  - >-
    ../../k8s/bases/infrastructure/cluster-policies/best-practices/restrict-unifi-management-policies.yaml
resources:
  - resources.yaml
variables: values.yaml
userinfo: user-info.yaml
results:
  - policy: restrict-unifi-management-policies
    rule: apply-without-delete
    resources:
      - unifi/wildcard
    kind: Record
    result: skip
  - policy: restrict-unifi-management-policies
    rule: observe-only-is-observe
    resources:
      - unifi/wildcard
    kind: Record
    result: skip
